# matrix-revolution

./: ArrayMatrixData.h  CMakeLists.txt  CommonMatrixData.h  MaterializerMD.h  Matrix.h  Matrix2.h  MatrixAccessors.h  MatrixCell.h  MatrixData.h  MatrixDataWrapper.h  MatrixIterator.h  MatrixMaterializer.h  MultiplyMD.h  MultiplyMatrix.h  OptimizableMD.h  OptimizableMatrixData.h  PerformanceLog.txt  README.md  Second assignment.md  StaticSizeMatrix.h  SumMD.h  SumMatrix.h  TODOs  Third assignment.md  ThreadPool.h  Utils.cpp  Utils.h  benchmark.cpp  main.cpp  matrix_exceptions.h  multiplicationTests.cpp  multiplicationTests2.cpp  tests.cpp
